--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,3 @@
-###IntelliJ###
-
-*.iml
-*.ipr
-*.iws
-.idea/
-
-
 ###JetBrains###
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
@@ -62,7 +54,7 @@ hs_err_pid*
 
 # project files should be checked into the repository, unless a significant
 # proportion of contributors will probably not be using SublimeText
-# *.sublime-project
+*.sublime-project
 
 
 ###NotepadPP###
@@ -204,6 +196,48 @@ local.properties
 Session.vim
 .netrwhist
 *~
+
+###Ruby###
+
+*.gem
+*.rbc
+/.config
+/coverage/
+/InstalledFiles
+/pkg/
+/spec/reports/
+/test/tmp/
+/test/version_tmp/
+/tmp/
+
+## Specific to RubyMotion:
+.dat*
+.repl_history
+build/
+
+## Documentation cache and generated files:
+/.yardoc/
+/_yardoc/
+/doc/
+/rdoc/
+
+## Environment normalisation:
+/.bundle/
+/lib/bundler/man/
+
+# for a library or gem, you might want to ignore these files since the code is
+# intended to run in multiple environments; otherwise, check them in:
+Gemfile.lock
+.ruby-version
+.ruby-gemset
+
+# unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
+.rvmrc
+
+
+###Jekyll###
+
+_site/
 
 ### MY FILES ###
 *.java
