--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,3 @@
-###IntelliJ###
-
-*.iml
-*.ipr
-*.iws
-.idea/
-
-
 ###JetBrains###
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
@@ -62,7 +54,7 @@ hs_err_pid*
 
 # project files should be checked into the repository, unless a significant
 # proportion of contributors will probably not be using SublimeText
-# *.sublime-project
+*.sublime-project
 
 
 ###NotepadPP###
